<?xml version="1.0"?>
<package format="3">
  <name>auv_octomap</name>
  <version>0.0.1</version>
  <description>The auv_octomap package</description>

  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>octomap_server</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
